@@ -1,24 +1,7 @@
 /*
-* JBoss, Home of Professional Open Source.
-* Copyright 2012, Red Hat, Inc., and individual contributors
-* as indicated by the @author tags. See the copyright.txt file in the
-* distribution for a full listing of individual contributors.
-*
-* This is free software; you can redistribute it and/or modify it
-* under the terms of the GNU Lesser General Public License as
-* published by the Free Software Foundation; either version 2.1 of
-* the License, or (at your option) any later version.
-*
-* This software is distributed in the hope that it will be useful,
-* but WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-* Lesser General Public License for more details.
-*
-* You should have received a copy of the GNU Lesser General Public
-* License along with this software; if not, write to the Free
-* Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-* 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-*/
+ * Copyright The WildFly Authors
+ * SPDX-License-Identifier: Apache-2.0
+ */
 
 package org.jboss.as.test.integration.jpa.webtxem;
 
@@ -32,6 +15,7 @@ import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.transaction.Status;
 import jakarta.transaction.UserTransaction;
 
 import org.jboss.as.test.integration.jpa.hibernate.entity.Flight;
@@ -70,7 +54,7 @@ public class TestServlet extends HttpServlet {
 
                 } else if (mode.equals("read")) {
 
-                    Flight f = em.find(Flight.class, new Long(1));
+                    Flight f = em.find(Flight.class, Long.valueOf(1));
                     resp.setContentType("text/plain");
                     PrintWriter out = resp.getWriter();
                     out.print(f.getName());
@@ -82,7 +66,11 @@ public class TestServlet extends HttpServlet {
                 tx.setRollbackOnly();
                 throw e;
             } finally {
-                tx.commit();
+                if (tx.getStatus() == Status.STATUS_MARKED_ROLLBACK) {
+                    tx.rollback();
+                } else {
+                    tx.commit();
+                }
             }
 
         } catch (Exception e) {
